k8s/ingress/meals-calendar-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: meals-calendar-ingress
spec:
  rules:
  - http:
      paths:
      - path: /meals-calendar/api/
        backend:
          serviceName: meals-calendar-deployment-svc
          servicePort: 8080
